titel padding on small screens fixed

--- a/style.css
+++ b/style.css
@@ -3161,6 +3161,9 @@ body {
 		margin: 0 0 0 -120px;
 		background-size: 100% auto;
 	}
+	#title-inside {
+		padding: 0;
+	}
 	.post-title {
 		font-size: 1.6em;
 	}
